NATTQA-ENV/force-app/main/default/objects/Account/fields/Account_Creation_Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Creation_Request_Number__c</fullName>
    <displayFormat>NAC-{00000}</displayFormat>
    <label>NAOCP Creation Request Number</label>
    <type>AutoNumber</type>
</CustomField>