NATTQA-ENV/force-app/main/default/objects/Account/fields/AccountSafeId__c.field-meta.xml
<CustomField>
    <fullName>AccountSafeId__c</fullName>
    <description>Account 18 Char ID from NPS</description>
    <formula>CASESAFEID(Id)</formula>
    <label>AccountSafeId</label>
    <type>Text</type>
</CustomField>