NATTQA-ENV/force-app/main/default/objects/Account/fields/Authorized_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Service_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorized Service Provider</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>CONTAINER Authorized Service Provider</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Service Account)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>