NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Account_External_ID__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Account_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Account External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>