NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Agreement_Term__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Agreement_Term__c</fullName>
    <description>Container Service field</description>
    <label>Agreement Term</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>