NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_AR_Code_JDE_AR_Code__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_AR_Code_JDE_AR_Code__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Bill To #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>