NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Awarded__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Awarded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Awarded</label>
    <type>Checkbox</type>
</CustomField>