NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_BaaN_Bill_To_Code__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_BaaN_Bill_To_Code__c</fullName>
    <description>CONTAINER BaaN Bill To Code</description>
    <externalId>true</externalId>
    <label>BaaN Bill To Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>