NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Basic_Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Basic_Discount_Rate__c</fullName>
    <description>Container Service field</description>
    <formula>IF(  OR(ISPICKVAL( CONTAINER_Level__c , &apos;L1&apos;),ISPICKVAL( CONTAINER_Level__c , &apos;L2&apos;)) , 0.22 , 0.10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Basic Discount Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>