NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Billing_Currency__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Billing_Currency__c</fullName>
    <defaultValue>&quot;USD&quot;</defaultValue>
    <description>Billing Currency for container customer account</description>
    <label>Billing Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>