NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_BluEdge_Partner__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_BluEdge_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BluEdge Partner</label>
    <type>Checkbox</type>
</CustomField>