NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Business_Operating_Days__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Business_Operating_Days__c</fullName>
    <description>Container Service field from Tavant</description>
    <label>Business Operating Days</label>
    <length>100</length>
    <type>Text</type>
</CustomField>