NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_CAP_Account_AP_Code__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_CAP_Account_AP_Code__c</fullName>
    <label>CAP Account AP Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>