NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Cap_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Cap_Account_Number__c</fullName>
    <description>Container Service field</description>
    <label>CAP Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>