NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Caremax__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Caremax__c</fullName>
    <description>Container Service field from Lotus</description>
    <label>Caremax</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>