NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Commisioning_Rate__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Commisioning_Rate__c</fullName>
    <description>Custom field for commissioning object</description>
    <label>Commisioning Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>