NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Company_Email__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Company_Email__c</fullName>
    <description>Container Service field</description>
    <label>Company Email</label>
    <type>Email</type>
</CustomField>