NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Company_Gen_Phone__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Company_Gen_Phone__c</fullName>
    <description>Container Company Gen Phone</description>
    <label>Company Gen Phone</label>
    <type>Phone</type>
</CustomField>