NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Company_GST_Number__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Company_GST_Number__c</fullName>
    <description>Company GST Number for container customer accounts</description>
    <label>Company GST Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>