NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Company_Registration__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Company_Registration__c</fullName>
    <description>Company registration Info for container customer accounts</description>
    <label>Company Registration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>