NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Created__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Created__c</fullName>
    <description>Created (Effective Date)</description>
    <label>Created</label>
    <type>Date</type>
</CustomField>