NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_CTD_Sales_Contact__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_CTD_Sales_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Container Service field.</description>
    <label>CTD Sales Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CONTAINER_Account</relationshipName>
    <type>Lookup</type>
</CustomField>