NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Current_Agreement_Expires__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Current_Agreement_Expires__c</fullName>
    <description>Container Service field</description>
    <label>Current Agreement Expires</label>
    <type>Date</type>
</CustomField>