NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Customer_Group__c</fullName>
    <description>Customer Group for container customer account</description>
    <label>Customer Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>