NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Customer_Type__c</fullName>
    <description>Container Customer Type</description>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Box Mfg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>