NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Duties_Freight_and_Taxes__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Duties_Freight_and_Taxes__c</fullName>
    <description>Container Service field</description>
    <label>Duties Freight and Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>