NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_External_Agreements__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_External_Agreements__c</fullName>
    <description>Container Service field</description>
    <label>External Agreements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TK</fullName>
            </value>
            <value>
                <fullName>MHI</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Daikin</fullName>
            </value>
            <value>
                <fullName>Starcool</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>