NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Field_Service_Center_Agreement__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Field_Service_Center_Agreement__c</fullName>
    <description>Container Service field</description>
    <inlineHelpText>Please provide value in YYYY format</inlineHelpText>
    <label>First Service Center Agreement</label>
    <length>4</length>
    <type>Text</type>
</CustomField>