NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Field_Service_Manager__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Field_Service_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Container Service field</description>
    <label>Field Service Manager</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Container Service FSM</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Container Service RSM</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>