NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_GST_Registered__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_GST_Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Container GST Registered</description>
    <label>GST Registered</label>
    <type>Checkbox</type>
</CustomField>