NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Internal_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Internal_Account_Number__c</fullName>
    <description>Container Service field</description>
    <label>Internal Account Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>