NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Internal_Career_Agreements__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Internal_Career_Agreements__c</fullName>
    <description>Container Service field</description>
    <label>Internal Career Agreements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Container</fullName>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>Truck/Trailer</fullName>
            </value>
            <value>
                <fullName>Marine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>