NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_JDE__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_JDE__c</fullName>
    <description>JDE # will be used in integration</description>
    <label>JDE #</label>
    <length>48</length>
    <type>Text</type>
</CustomField>