NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_JDE_Bill_To_Code__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_JDE_Bill_To_Code__c</fullName>
    <description>CONTAINER JDE BILLT TO CODE</description>
    <externalId>true</externalId>
    <label>JDE Bill To Code</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>