NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_JDE_Legacy_parent_code__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_JDE_Legacy_parent_code__c</fullName>
    <description>CONTAINER JDE Legacy parent code</description>
    <label>JDE Legacy(parent) code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>