NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_JDE_Parent_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_JDE_Parent_Account_Code__c</fullName>
    <description>Container JDE Parent Account Code</description>
    <label>CONTAINER JDE Parent Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>