NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Jurisdiction_Established__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Jurisdiction_Established__c</fullName>
    <description>Container Service field from Tavant</description>
    <label>Jurisdiction Established</label>
    <length>100</length>
    <type>Text</type>
</CustomField>