NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Legacy_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Legacy_Bill_To__c</fullName>
    <description>Legacy Bill To # will be used in integration</description>
    <label>Legacy Bill To #</label>
    <length>48</length>
    <type>Text</type>
</CustomField>