NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Legal_Name__c</fullName>
    <description>Legal Name of Container Customer Account (Company)</description>
    <label>Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>