NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Level__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Level__c</fullName>
    <description>Container Level</description>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CONTAINER_Service_Location_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>L1</fullName>
            </value>
            <value>
                <fullName>L2</fullName>
            </value>
            <value>
                <fullName>L3</fullName>
            </value>
            <value>
                <fullName>Genset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>