NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Location_City__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Location_City__c</fullName>
    <description>Address field for Container Service Users.</description>
    <label>Location City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>