NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_location_Full_Address__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_location_Full_Address__c</fullName>
    <description>Address field for Container Service Users.</description>
    <formula>CONTAINER_Location_Street__c &amp; BR() &amp;
If(NOT( ISBLANK(CONTAINER_Location_Street2__c )),CONTAINER_Location_Street2__c &amp; BR() , &apos;&apos;) +
CONTAINER_Location_City__c +IF( (NOT( ISBLANK(CONTAINER_Location_City__c )) &amp;&amp; NOT( ISBLANK(CONTAINER_Location_State__c ))), &apos;, &apos; + CONTAINER_Location_State__c, CONTAINER_Location_State__c) + 
If (((NOT( ISBLANK(CONTAINER_Location_City__c )) || NOT( ISBLANK(CONTAINER_Location_State__c ))) &amp;&amp; NOT( ISBLANK(Location_Zip_Postal_Code__c ))), &apos;,&apos;+Location_Zip_Postal_Code__c,Location_Zip_Postal_Code__c) &amp; BR() &amp;
CONTAINER_Location_Country__c</formula>
    <label>Location Address</label>
    <type>Text</type>
</CustomField>