NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Location_State__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Location_State__c</fullName>
    <description>Address field for Container Service Users.</description>
    <label>Location State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>