NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Location_Street__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Location_Street__c</fullName>
    <description>Address field for Container Service Users.</description>
    <label>Location Street</label>
    <type>TextArea</type>
</CustomField>