NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Mailing_Country__c</fullName>
    <description>Address field for Container Service Users.</description>
    <label>Mailing  Country</label>
    <length>30</length>
    <type>Text</type>
</CustomField>