NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Mailing_Full_Address__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Mailing_Full_Address__c</fullName>
    <description>Address field for Container Service Users.</description>
    <formula>CONTAINER_Mailing_Street__c &amp; BR() &amp;
If(NOT( ISBLANK(CONTAINER_Mailing_Street2__c)),CONTAINER_Mailing_Street2__c&amp; BR() , &apos;&apos;) +
CONTAINER_Mailing_City__c +IF( (NOT( ISBLANK(CONTAINER_Mailing_City__c )) &amp;&amp; NOT( ISBLANK(CONTAINER_Mailing_State__c ))), &apos;, &apos; + CONTAINER_Mailing_State__c, CONTAINER_Mailing_State__c) + 
If (((NOT( ISBLANK(CONTAINER_Mailing_City__c )) || NOT( ISBLANK(CONTAINER_Mailing_State__c ))) &amp;&amp; NOT( ISBLANK(CONTAINER_Mailing_Zip_Postal_Code__c ))), &apos;,&apos;+CONTAINER_Mailing_Zip_Postal_Code__c,CONTAINER_Mailing_Zip_Postal_Code__c) &amp; BR() &amp;
CONTAINER_Mailing_Country__c</formula>
    <label>Mailing  Address</label>
    <type>Text</type>
</CustomField>