NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Mailing_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Mailing_Zip_Postal_Code__c</fullName>
    <description>Address field for Container Service Users.</description>
    <label>Mailing  Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>