NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Office_Type__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Office_Type__c</fullName>
    <description>Office type picklist for container sales account</description>
    <label>Office Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Head office</fullName>
            </value>
            <value>
                <fullName>Regional Office</fullName>
            </value>
            <value>
                <fullName>Local office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>