NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Operating_Region__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Operating_Region__c</fullName>
    <description>Oprating region of container customer</description>
    <label>Operating Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NAO</fullName>
            </value>
            <value>
                <fullName>APO</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
                <isActive>false</isActive>
                <label>APAC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>