NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Other_Refrigerant_Rate__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Other_Refrigerant_Rate__c</fullName>
    <description>Container Service field</description>
    <label>Other Refrigerant Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>