NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Other_Refrigerants_if_Appl__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Other_Refrigerants_if_Appl__c</fullName>
    <description>Container Service field</description>
    <label>Other Refrigerants if Applicable</label>
    <length>100</length>
    <type>Text</type>
</CustomField>