NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Part_Handling_Cap__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Part_Handling_Cap__c</fullName>
    <description>Container Service field</description>
    <formula>IF( ISPICKVAL( CONTAINER_Level__c , &apos;L1&apos;) , 400 ,
IF( ISPICKVAL( CONTAINER_Level__c , &apos;L2&apos;) , 300 ,
IF( ISPICKVAL( CONTAINER_Level__c , &apos;L3&apos;) , 200 , 200)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part Handling CAP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>