NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Parts_BU__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Parts_BU__c</fullName>
    <description>Container Parts BU</description>
    <label>Parts BU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>