NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Parts_Handling__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Parts_Handling__c</fullName>
    <description>Container Service field</description>
    <formula>IF( ISPICKVAL( CONTAINER_Level__c , &apos;L1&apos;) , 0.35 , 
IF( ISPICKVAL( CONTAINER_Level__c , &apos;L2&apos;) , 0.25 ,
IF( ISPICKVAL( CONTAINER_Level__c , &apos;L3&apos;) , 0.15 , 0.15)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parts  Handling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>