NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Parts_Purchase_Location__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Parts_Purchase_Location__c</fullName>
    <description>Container Service field for Location of Parts Purchase</description>
    <label>Parts Purchase Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>