NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Parts_Reimbursement_Rate__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Parts_Reimbursement_Rate__c</fullName>
    <description>Container Service field</description>
    <label>Parts Reimbursement Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>