NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Payment_Terms__c</fullName>
    <description>Container Payment Terms</description>
    <label>Payment Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>