NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Port__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Port__c</fullName>
    <description>Container Service field from Tavant</description>
    <label>Port</label>
    <length>100</length>
    <type>Text</type>
</CustomField>