NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Principal_Location__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Principal_Location__c</fullName>
    <description>Container Service field from Tavant</description>
    <label>Principal Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>