NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_R1234yf_Refrigerant__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_R1234yf_Refrigerant__c</fullName>
    <description>Container Service field</description>
    <label>R1234yf Refrigerant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>