NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_R513a_Refrigerant__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_R513a_Refrigerant__c</fullName>
    <description>Container Service field</description>
    <label>R513a Refrigerant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>