NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_R513a_Units__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_R513a_Units__c</fullName>
    <description>Container Service field</description>
    <label>R513a Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lb</fullName>
            </value>
            <value>
                <fullName>Kg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>