NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Same_as_location_address__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Same_as_location_address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Container Service field</description>
    <label>Mailing Address same as location address</label>
    <type>Checkbox</type>
</CustomField>