NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Service_Center_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Service_Center_Geolocation__c</fullName>
    <description>CONTAINER Service Center Latitude and Longitude will be captured manually</description>
    <label>Service Center Geolocation</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>