NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Service_Company_Registration__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Service_Company_Registration__c</fullName>
    <description>Container Service field</description>
    <label>Company Registration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Limited Liability Company</fullName>
            </value>
            <value>
                <fullName>Sole Proprietary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>