NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Service_Location__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Service_Location__c</fullName>
    <description>Container Service field for Service Location</description>
    <label>Service Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>